<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthyFood</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_activity_busca_recetas">Buscar Recetas</string>
    <string name="title_activity_publica_receta">Publicar Recetas</string>
    <string name="title_activity_mis_recetas">Mis Recetas</string>
    <string name="title_activity_ejercicios">Ejercicios</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_medidor">Medidor</string>
    <string name="title_tab_profile">Mi perfil</string>
    <string name="title_tab_recipes">Recetas</string>
    <string name="title_tab_settings">Configuración</string>
    <string name="menu">Menú</string>
    <string name="exito">Éxito</string>
    <string name="receta_no_fav">La receta no ha sido favorecida con éxito</string>
    <string name="calorias_consumidas_dia">Calorías consumidas el día: </string>
    <string name="calorias_totales">Calorías totales \nConsumidas</string>
    <string name="imc_por_medicion">IMC por medición</string>

    <string name="delgadez_servera">Se encuentra en delgadez severa</string>
    <string name="bajo_peso">Se encuentra bajo peso</string>
    <string name="normal">Se encuentra normal</string>
    <string name="sobrepeso">Se encuentra en sobrepeso</string>
    <string name="obeso">Se encuentra en obesidad</string>
    <string name="obesidad_morbidad">Se encuentra en obesidad mórbida</string>

    <string-array name="encabezado_progreso_array">
        <item name="fecha">Fecha</item>
        <item name="altura_m">Altura (m)</item>
        <item name="peso_kg">Peso (kg)</item>
        <item name="imc_kg_m2">IMC (kg/m^2)</item>
    </string-array>

    <string-array name="categories_array">
        <item>Entrada</item>
        <item>Ensalada</item>
        <item>Plato Fuerte</item>
        <item>Desayuno</item>
        <item>Almuerzo</item>
        <item>Refrigerio</item>
        <item>Cena</item>
        <item>Postre</item>
        <item>Bebida</item>
    </string-array>
    <string-array name="option_list">
        <item>Principal</item>
        <item>Recetas</item>
        <item>Ejercicios</item>
        <item>Configuración</item>
        <item>Cerrar Sesión</item>
    </string-array>
    <string-array name="gender_array">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>
    <string-array name="objective_array">
        <item>Bajar peso</item>
        <item>Mantener peso</item>
        <item>Ganar peso</item>
    </string-array>

    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="title_activity_forgot_data">Datos olvidados</string>
    <string name="title_activity_registrar">Registrar</string>
    <string name="title_activity_ingredientes">Ingredientes</string>
    <string name="title_activity_recetas_propias">Recetas Propias</string>
    <string name="title_activity_favoritas">Favoritas</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_visualiza_receta">Receta</string>
    <string name="title_activity_progreso_imc">Progreso IMC</string>
    <string name="title_activity_consumo_diario">Consumo diario de calorías</string>
    <string name="title_activity_visualiza_ejercicio">Visualización de ejercicios</string>
    <string name="title_activity_settings">Configuración</string>

    <string name="consumo_calorias">Consumo diario de calorías</string>
    <string name="username">Username</string>
    <string name="username_register">Username</string>
    <string name="email">e-mail</string>
    <string name="nombre_reg">Nombre</string>
    <string name="sexo_reg">Sexo</string>
    <string name="fecha_nacimiento_reg">Fecha de nacimiento</string>
    <string name="seleccionar_fecha_reg">Seleccionar Fecha</string>
    <string name="fecha_reg">Small Text</string>
    <string name="password_reg">Password</string>
    <string name="confirma_pass_reg">Confirma Password</string>
    <string name="registro_reg">Registrar</string>
    <string name="editar_button">Editar</string>
    <string name="cancelar_button">Cancelar</string>
    <string name="nueva_password_edit">Nuevo Password</string>
    <string name="confirma_nueva_pass">Confirma Nuevo Password</string>
    <string name="calorias_receta">Calorías en la receta</string>

    <string name="settings">Cuenta</string>
    <string name="user_summary">Configuración del usuario</string>
    <string name="password_summary">Cambio de Password</string>
    <string name="settings_summary">Configuración de la cuenta</string>
    <string name="user_setting">Usuario</string>
    <string name="password_setting">Cambio de password</string>
    <string name="sync_setting">Sincronización</string>
    <string name="logout_setting">Cerrar Sesión</string>
    <string name="error_auth">Error de autenticación</string>
    <string name="user_o_pass">Usuario o contraseña no válidos</string>
    <string name="pass_no_coincide">Las contraseñas no coinciden</string>
    <string name="email_no_valido">Email no válido</string>

    <string name="APP_ID">458658497620957</string>
    <string name="title_activity_complete_fbdata">CompleteFBData</string>
    <string name="agregar">Agregar</string>
    <string name="nueva_instrucc">Nueva Instrucción</string>
    <string name="instruccion_item_text">Instrucción</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="login_vacio">Ingrese usuario y contraseña</string>
    <string name="separator">¬</string>

    <string name="elimina_ingrediente_msg">El ingrediente ya ha sido agregado, ¿desea eliminarlo?</string>
    <string name="mensaje_error_numero">Ingrese un número; mayor a 0</string>
    <string name="mensaje_calorias_ingrediente"> calorías por cada 100 gramos</string>
    <string name="titulo_info_ingrediente">Información sobre el ingrediente</string>
</resources>
