<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registro" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tituloReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_register" />

            <EditText
                android:id="@+id/registro_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textTipoReceta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/registro_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_reg" />

            <EditText
                android:id="@+id/registro_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textCapCharacters" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo_reg" />

            <Spinner
                android:id="@+id/selectorSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textNombreEjercicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nacimiento_reg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/botonSeleccionFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccionar_fecha_reg" />

                <TextView
                    android:id="@+id/textoFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_reg"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <TextView
                android:id="@+id/textCalorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_reg" />

            <EditText
                android:id="@+id/registro_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirma_pass_reg" />

            <EditText
                android:id="@+id/registro_confirma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/registro_boton_confirma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_reg" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
